Write down how to measure generation performance
There is no benchmark module and no timing assertion in CI, because timing
assertions on shared runners are a reliable source of flaky builds. That
leaves nothing describing how the performance numbers were produced, so the
next person has to rediscover the method - and four details in it each
invalidated a measurement before being pinned down: the test reports have to
be off, the JaCoCo agent has to be off because it instruments this project's
classes but not JUnit's, the fixed Gradle and JVM startup cost has to be
subtracted, and a single run cannot distinguish a ten percent effect from
noise.

Also records that the number to read for memory is the live heap after each
collection rather than the peak, and that the baseline should be run the
same way before concluding any retention belongs to this library - mostly it
does not.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016SbZTea2jAQmq1evmjh54s